Iterator API should fail if any scalar streams are different lengths

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.0-rc2
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Integration
    • Fully Compatible
    • ALL
    • v8.0
    • QI 2024-04-15
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Caught by the fuzzer. The iterator API fails if a stream is done before the rest of the streams are done. However, this check doesn't work if the 0th stream hits eoo but later streams have more elements to be decompressed. The block-based API checks that all streams decompress the same number of elements in SERVER-88840 so we should improve the check in the iterator API to match the block-based API

            Assignee:
            Gil Alon
            Reporter:
            Gil Alon
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: