SERVER-89022 Verify all decoders are exhausted before exiting interleaved mode in the iterator API (#20847)

GitOrigin-RevId: 44d2d496bbb44400da2e55dfcc6cd76d4b5d7df5